--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "django (>=5.2.7,<6.0.0)"
+    "fastapi (>=0.122.0,<0.123.0)",
+    "pytest (>=9.0.1,<10.0.0)"
 ]
 
 
